[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Menus/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Audio/sound/163455__lemudcrab__shotgun-shot.ogg" type="AudioStream" id=2]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Settings" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -197.0
margin_right = 100.0
margin_bottom = 197.0
custom_constants/separation = 10

[node name="AudioSettings" type="VBoxContainer" parent="Settings"]
margin_right = 200.0
margin_bottom = 106.0

[node name="MusicLabel" type="Label" parent="Settings/AudioSettings"]
margin_right = 200.0
margin_bottom = 31.0
text = "
Music Volume"
align = 1

[node name="MusicVolume" type="HSlider" parent="Settings/AudioSettings"]
margin_top = 35.0
margin_right = 200.0
margin_bottom = 51.0
rect_min_size = Vector2( 200, 0 )
max_value = 1.0
step = 0.1

[node name="SoundLabel" type="Label" parent="Settings/AudioSettings"]
margin_top = 55.0
margin_right = 200.0
margin_bottom = 86.0
text = "
Sound Volume"
align = 1

[node name="SoundVolume" type="HSlider" parent="Settings/AudioSettings"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 106.0
max_value = 1.0
step = 0.1

[node name="Control" type="Control" parent="Settings"]
margin_top = 116.0
margin_right = 200.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 40 )

[node name="SetDeletion" type="CheckBox" parent="Settings"]
margin_top = 166.0
margin_right = 200.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 50 )
text = "Delete all Data?"

[node name="Confirm" type="Button" parent="Settings"]
margin_top = 226.0
margin_right = 200.0
margin_bottom = 276.0
rect_min_size = Vector2( 200, 50 )
text = "Confirm Deletion"

[node name="Label" type="Label" parent="Settings"]
margin_top = 286.0
margin_right = 200.0
margin_bottom = 334.0
text = "Deletion is not reversible!

"
align = 1

[node name="Cancel" type="Button" parent="Settings"]
margin_top = 344.0
margin_right = 200.0
margin_bottom = 394.0
rect_min_size = Vector2( 200, 50 )
text = "Close"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Sound"

[connection signal="value_changed" from="Settings/AudioSettings/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="Settings/AudioSettings/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
[connection signal="toggled" from="Settings/SetDeletion" to="." method="_on_SetDeletion_toggled"]
[connection signal="pressed" from="Settings/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Settings/Cancel" to="." method="_on_Cancel_pressed"]
